<resources>
    <string name="app_name">Home Services</string>
    <string name="username">username:</string>
    <string name="account_type_serviceprovider">account type: SERVICEPROVIDER</string>
    <string name="add_service">Add Service</string>
    <string name="rate_hour">Rate/hour</string>
    <string name="servicename">serviceName</string>
    <string name="welcome">Welcome</string>
    <string name="tap_to_edit">Tap To Edit</string>
    <string name="or">OR</string>
    <string name="create_account">create account</string>
    <string name="login">login</string>
    <string name="clear_database">clear database</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="title_activity_home_owner">HomeOwner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="edit_profile">edit Profile</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Register an account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_invalid_login">Error logging in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!-- Strings related to registering -->
    <string name="prompt_username">Username</string>
    <string name="role_label">Type</string>
    <string name="role_admin">Admin</string>
    <string name="role_service_provider">Service Provider</string>
    <string name="role_home_owner">Home Owner</string>
    <string name="action_register">Register</string>
    <string name="error_admin_exists">Admin account already exists</string>
    <string name="error_email_used">Email address is taken</string>
    <string name="error_username_used">Username is taken</string>
    <string name="register_success">Account successfully registered</string>
    <string name="error_database">Database error</string>
</resources>
